--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
+
         :root {
             --bg-primary: #0a0f1a;
             --bg-secondary: #111827;
@@ -15,131 +16,285 @@
             --text-primary: #f1f5f9;
             --text-secondary: #94a3b8;
             --accent: #10b981;
+            --accent-hover: #059669;
+            --accent-glow: rgba(16, 185, 129, 0.15);
         }
 
-        body { font-family: 'DM Sans', sans-serif; background: var(--bg-primary); color: var(--text-primary); overflow: hidden; height: 100vh; }
+        body {
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
+            background: var(--bg-primary);
+            color: var(--text-primary);
+            overflow: hidden;
+            min-height: 100vh;
+        }
 
+        /* ── NAVBAR ── */
         .navbar {
             background: var(--bg-secondary);
-            padding: 0 16px;
-            height: 70px;
+            padding: 0 24px;
+            height: 60px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             border-bottom: 1px solid var(--border);
+            position: relative;
             z-index: 200;
         }
 
-        .nav-brand { display: flex; align-items: center; gap: 8px; }
+        /* Brand */
+        .nav-brand {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            flex-shrink: 0;
+        }
         .nav-brand-icon {
-            width: 32px; height: 32px;
+            width: 32px; height: 32px; min-width: 32px;
             background: linear-gradient(135deg, var(--accent), #047857);
             border-radius: 8px;
             display: flex; align-items: center; justify-content: center;
         }
-        .nav-brand-text { font-weight: 700; font-size: 13px; line-height: 1.1; }
+        .nav-brand-text {
+            font-weight: 700; font-size: 14px;
+            color: var(--text-primary);
+            white-space: nowrap;
+        }
 
-        .nav-group { display: flex; gap: 6px; }
+        /* Desktop nav tabs */
+        .nav-group {
+            display: flex;
+            gap: 6px;
+            align-items: center;
+        }
         .nav-btn {
-            padding: 8px 12px;
+            padding: 8px 16px;
             cursor: pointer;
             border: 1px solid var(--border);
             background: transparent;
             border-radius: 8px;
-            font-weight: 500; font-size: 13px;
+            font-weight: 500; font-size: 14px;
             color: var(--text-secondary);
-            transition: all 0.2s;
-            display: flex; align-items: center; gap: 5px;
+            font-family: inherit;
+            transition: all 0.2s ease;
+            display: flex; align-items: center; gap: 7px;
+            white-space: nowrap;
         }
-        .nav-btn.active { background: rgba(16, 185, 129, 0.1); color: var(--accent); border-color: var(--accent); }
+        .nav-btn:hover { background: var(--bg-card); color: var(--text-primary); }
+        .nav-btn.active { background: var(--accent-glow); color: var(--accent); border-color: var(--accent); }
+        .nav-btn svg { width: 15px; height: 15px; flex-shrink: 0; }
 
-        .filter-group { display: flex; gap: 8px; }
+        /* Filters */
+        .filter-group { display: flex; gap: 10px; align-items: center; }
         select {
-            padding: 6px 24px 6px 8px;
-            border-radius: 6px;
+            padding: 8px 32px 8px 12px;
+            border-radius: 8px;
             border: 1px solid var(--border);
             background: var(--bg-card);
             color: var(--text-primary);
-            font-size: 12px;
+            cursor: pointer;
+            font-weight: 500; font-size: 13px;
+            font-family: inherit;
+            min-width: 150px;
+            transition: all 0.2s ease;
             appearance: none;
             background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 24 24' fill='none' stroke='%2394a3b8' stroke-width='2'%3E%3Cpath d='M6 9l6 6 6-6'/%3E%3C/svg%3E");
             background-repeat: no-repeat;
-            background-position: right 8px center;
+            background-position: right 10px center;
         }
+        select:hover, select:focus { border-color: var(--accent); outline: none; }
+        select option { background: var(--bg-secondary); color: var(--text-primary); }
 
+        /* Hamburger (hidden on desktop) */
         .hamburger { display: none; }
 
-        iframe { width: 100%; height: calc(100vh - 70px); border: none; }
+        /* iframe */
+        iframe {
+            width: 100%;
+            height: calc(100vh - 60px);
+            border: none;
+            background: var(--bg-primary);
+        }
 
+        /* ── MOBILE DROPDOWN MENU ── */
         .mobile-menu {
-            display: none; position: absolute; top: 70px; left: 0; right: 0;
-            background: var(--bg-secondary); border-bottom: 1px solid var(--border);
-            padding: 10px; flex-direction: column; gap: 5px; z-index: 150;
+            display: none;
+            position: absolute;
+            top: 60px; left: 0; right: 0;
+            background: var(--bg-secondary);
+            border-bottom: 1px solid var(--border);
+            padding: 12px 16px;
+            flex-direction: column;
+            gap: 8px;
+            z-index: 150;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
         }
         .mobile-menu.open { display: flex; }
+        .mobile-menu .nav-btn {
+            width: 100%;
+            justify-content: flex-start;
+            padding: 12px 16px;
+            font-size: 15px;
+        }
 
+        /* ── RESPONSIVE ── */
         @media (max-width: 768px) {
+            .navbar { padding: 0 14px; }
+
+            /* Hide desktop tabs */
             .nav-group { display: none; }
-            .hamburger { 
-                display: flex; flex-direction: column; gap: 4px; 
-                width: 32px; padding: 6px; border: 1px solid var(--border); border-radius: 6px;
+
+            /* Show hamburger */
+            .hamburger {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 5px;
+                width: 36px; height: 36px;
+                cursor: pointer;
+                background: var(--bg-card);
+                border: 1px solid var(--border);
+                border-radius: 8px;
+                padding: 7px;
+                flex-shrink: 0;
+                transition: border-color 0.2s;
             }
-            .hamburger span { display: block; width: 100%; height: 2px; background: var(--text-secondary); }
-            .filter-group { flex-direction: column; gap: 4px; }
-            select { min-width: 100px; font-size: 10px; padding: 4px 20px 4px 6px; }
-            .nav-brand-text { font-size: 11px; }
+            .hamburger:hover { border-color: var(--accent); }
+            .hamburger span {
+                display: block; width: 100%; height: 2px;
+                background: var(--text-secondary); border-radius: 2px;
+                transition: all 0.3s ease;
+            }
+            .hamburger.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+            .hamburger.open span:nth-child(2) { opacity: 0; }
+            .hamburger.open span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+
+            /* Compact filters */
+            .filter-group { gap: 6px; }
+            select {
+                min-width: 0;
+                font-size: 12px;
+                padding: 7px 28px 7px 10px;
+            }
+            /* Hide category filter label/text overflow on very small screens */
+            #filtroCat { max-width: 120px; }
+            #filtroPeriodo { max-width: 130px; }
+
+            .nav-brand-text { font-size: 13px; }
+
+            iframe { height: calc(100vh - 60px); }
+        }
+
+        @media (max-width: 420px) {
+            .navbar { padding: 0 10px; }
+            select { font-size: 11px; padding: 6px 24px 6px 8px; }
+            #filtroCat { max-width: 100px; }
+            #filtroPeriodo { max-width: 110px; }
+            .nav-brand-text { display: none; }
         }
     </style>
 </head>
 <body>
+
     <nav class="navbar">
-        <div style="display:flex; align-items:center; gap:8px;">
+        <!-- Left: hamburger + brand -->
+        <div style="display:flex;align-items:center;gap:10px;">
             <div class="hamburger" id="hamburger" onclick="toggleMenu()">
                 <span></span><span></span><span></span>
             </div>
             <div class="nav-brand">
                 <div class="nav-brand-icon">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
                 </div>
                 <span class="nav-brand-text">Gestor<br>Financeiro</span>
             </div>
         </div>
 
-        <div class="nav-group">
-            <button class="nav-btn active" onclick="mudarAba('planilha.html', this)">Planilha</button>
-            <button class="nav-btn" onclick="mudarAba('grafico.html', this)">Gráfico</button>
-            <button class="nav-btn" onclick="mudarAba('membros.html', this)">Membros</button>
+        <!-- Center: desktop tabs -->
+        <div class="nav-group" id="navDesktop">
+            <button class="nav-btn active" onclick="mudarAba('planilha.html', this)">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><line x1="10" y1="9" x2="8" y2="9"/></svg>
+                Planilha
+            </button>
+            <button class="nav-btn" onclick="mudarAba('grafico.html', this)">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg>
+                Gráfico
+            </button>
+            <button class="nav-btn" onclick="mudarAba('membros.html', this)">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                Membros
+            </button>
         </div>
 
+        <!-- Right: filters -->
         <div class="filter-group">
-            <select id="filtroCat" onchange="enviarFiltros()"><option value="Todas">Categorias</option><option value="Oferta">Oferta</option><option value="Dízimo">Dízimo</option><option value="Malawi">Malawi</option><option value="Campanha">Campanha</option></select>
-            <select id="filtroPeriodo" onchange="enviarFiltros()"><option value="Todos">Período</option></select>
+            <select id="filtroCat" onchange="enviarFiltros()">
+                <option value="Todas">Todas Categorias</option>
+                <option value="Oferta">Oferta</option>
+                <option value="Dízimo">Dízimo</option>
+                <option value="Malawi">Malawi</option>
+                <option value="Campanha">Campanha</option>
+            </select>
+            <select id="filtroPeriodo" onchange="enviarFiltros()">
+                <option value="Todos">Histórico Total</option>
+            </select>
         </div>
     </nav>
 
+    <!-- Mobile dropdown menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <button class="nav-btn active" onclick="mudarAba('planilha.html', this)">Planilha</button>
-        <button class="nav-btn" onclick="mudarAba('grafico.html', this)">Gráfico</button>
-        <button class="nav-btn" onclick="mudarAba('membros.html', this)">Membros</button>
+        <button class="nav-btn active" onclick="mudarAba('planilha.html', this)">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/></svg>
+            Planilha
+        </button>
+        <button class="nav-btn" onclick="mudarAba('grafico.html', this)">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg>
+            Gráfico
+        </button>
+        <button class="nav-btn" onclick="mudarAba('membros.html', this)">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg>
+            Membros
+        </button>
     </div>
 
     <iframe id="janela-aba" src="planilha.html"></iframe>
 
     <script>
         const nomesMeses = ["","Jan","Fev","Mar","Abr","Mai","Jun","Jul","Ago","Set","Out","Nov","Dez"];
-        function toggleMenu() { document.getElementById('mobileMenu').classList.toggle('open'); }
+
+        function toggleMenu() {
+            document.getElementById('mobileMenu').classList.toggle('open');
+            document.getElementById('hamburger').classList.toggle('open');
+        }
+
         function mudarAba(url, btn) {
             document.getElementById('janela-aba').src = url;
+
+            // Update active state on BOTH desktop and mobile buttons
             document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-            document.querySelectorAll(`.nav-btn[onclick*="${url}"]`).forEach(b => b.classList.add('active'));
-            document.getElementById('filtroCat').style.visibility = url === 'grafico.html' ? 'hidden' : 'visible';
+            // Mark all buttons with same url as active
+            document.querySelectorAll('.nav-btn').forEach(b => {
+                if (b.getAttribute('onclick') && b.getAttribute('onclick').includes(url)) {
+                    b.classList.add('active');
+                }
+            });
+
+            // Hide category filter on chart tab
+            document.getElementById('filtroCat').style.display = url === 'grafico.html' ? 'none' : '';
+
+            // Close mobile menu
             document.getElementById('mobileMenu').classList.remove('open');
+            document.getElementById('hamburger').classList.remove('open');
         }
+
         function enviarFiltros() {
-            const dados = { categoria: document.getElementById('filtroCat').value, periodo: document.getElementById('filtroPeriodo').value };
+            const dados = {
+                categoria: document.getElementById('filtroCat').value,
+                periodo: document.getElementById('filtroPeriodo').value
+            };
             document.getElementById('janela-aba').contentWindow.postMessage(dados, '*');
         }
-        async function carregarPeriodos() {
+
+        async function carregarPeriodosDinamicos() {
             const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTVFsO0U3JTeEpqIks1fpNUNiHF5J6Pgyv7yYiJKFgqyI08Y_sRB2nnikRvfT4W5CcwQwAW5r0Lvt1x/pub?output=csv';
             try {
                 const res = await fetch(url);
@@ -155,17 +310,17 @@
                 });
                 const sel = document.getElementById('filtroPeriodo');
                 Array.from(anos).sort().reverse().forEach(a => {
-                    sel.innerHTML += `<option value="${a}">Ano ${a}</option>`;
+                    sel.innerHTML += `<option value="${a}" style="font-weight:bold;"> Ano ${a}</option>`;
                     Array.from(mesesAnos).sort().reverse().forEach(ma => {
                         if (ma.endsWith(a)) {
                             const m = ma.split('/')[0];
-                            sel.innerHTML += `<option value="${ma}">${nomesMeses[parseInt(m)]}/${a}</option>`;
+                            sel.innerHTML += `<option value="${ma}">&nbsp;&nbsp; ${nomesMeses[parseInt(m)]} / ${a}</option>`;
                         }
                     });
                 });
             } catch(e) { console.error(e); }
         }
-        carregarPeriodos();
+        carregarPeriodosDinamicos();
     </script>
 </body>
 </html>
