--- a/membros.html
+++ b/membros.html
@@ -3,93 +3,283 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        :root { --bg-primary: #0a0f1a; --bg-secondary: #111827; --border: #2a3441; --text-primary: #f1f5f9; --text-muted: #64748b; --accent: #10b981; }
-        body { font-family: 'DM Sans', sans-serif; background: var(--bg-primary); color: var(--text-primary); padding: 12px; }
 
-        .area-resumo { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 15px; }
-        .card { background: var(--bg-secondary); border: 1px solid var(--border); border-radius: 10px; padding: 12px; text-align: center; }
-        .card span { font-size: 9px; color: var(--text-muted); text-transform: uppercase; }
-        .card strong { display: block; font-family: 'JetBrains Mono'; font-size: 18px; color: var(--accent); }
+        :root {
+            --bg-primary: #0a0f1a;
+            --bg-secondary: #111827;
+            --bg-card: #1a2332;
+            --border: #2a3441;
+            --text-primary: #f1f5f9;
+            --text-secondary: #94a3b8;
+            --text-muted: #64748b;
+            --accent: #10b981;
+            --accent-blue: #3b82f6;
+            --warning: #f59e0b;
+        }
 
-        .table-container { background: var(--bg-secondary); border: 1px solid var(--border); border-radius: 10px; overflow: hidden; }
-        table { width: 100%; border-collapse: collapse; }
-        th { background: #1a2332; padding: 10px; font-size: 10px; text-transform: uppercase; color: var(--text-muted); text-align: left; }
-        td { padding: 10px; border-bottom: 1px solid var(--border); font-size: 12px; }
-        
-        .nome-membro { font-weight: 600; white-space: normal; word-break: break-word; max-width: 120px; }
-        .tel-membro { font-family: 'JetBrains Mono'; font-size: 10px; color: var(--text-muted); }
-        .valor-membro { font-family: 'JetBrains Mono'; font-weight: 700; color: var(--accent); text-align: right; }
+        body {
+            font-family: 'DM Sans', -apple-system, sans-serif;
+            padding: 16px;
+            background: var(--bg-primary);
+            color: var(--text-primary);
+            min-height: 100vh;
+        }
 
-        .linha-incerto td { background: rgba(245,158,11,0.05); color: #f59e0b; font-size: 10px; text-align: center; }
+        /* ── SUMMARY CARDS ── */
+        .area-resumo {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 14px;
+            margin-bottom: 20px;
+        }
 
+        .card {
+            background: var(--bg-secondary);
+            border-radius: 12px;
+            padding: 18px 16px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            border: 1px solid var(--border);
+            position: relative;
+            overflow: hidden;
+        }
+        .card::after {
+            content: '';
+            position: absolute;
+            bottom: 0; left: 0; right: 0;
+            height: 3px;
+        }
+        .card span {
+            font-size: 10px; font-weight: 600;
+            color: var(--text-muted);
+            text-transform: uppercase; letter-spacing: 1.2px;
+        }
+        .card strong {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 26px; font-weight: 700;
+            margin-top: 6px;
+            letter-spacing: -1px;
+        }
+
+        .card-ativos::after  { background: linear-gradient(90deg, var(--accent-blue), #2563eb); }
+        .card-ativos strong  { color: var(--accent-blue); }
+        .card-total::after   { background: linear-gradient(90deg, var(--accent), #047857); }
+        .card-total strong   { color: var(--accent); }
+        .card-media::after   { background: linear-gradient(90deg, #f59e0b, #d97706); }
+        .card-media strong   { color: #f59e0b; }
+
+        /* ── TABLE ── */
+        .table-container {
+            background: var(--bg-secondary);
+            border-radius: 12px;
+            border: 1px solid var(--border);
+            overflow: hidden;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        table { width: 100%; border-collapse: collapse; min-width: 360px; }
+
+        th {
+            background: var(--bg-card);
+            padding: 14px 16px;
+            text-align: left;
+            border-bottom: 1px solid var(--border);
+            color: var(--text-secondary);
+            font-size: 11px; font-weight: 600;
+            text-transform: uppercase; letter-spacing: 0.5px;
+            white-space: nowrap;
+        }
+
+        td {
+            padding: 14px 16px;
+            border-bottom: 1px solid var(--border);
+            font-size: 13px;
+            white-space: nowrap;
+        }
+        tr:last-child td { border-bottom: none; }
+        tr:hover td { background: rgba(16,185,129,0.05); }
+
+        .nome-membro { font-weight: 600; color: var(--text-primary); }
+        .telefone-membro {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 12px; color: var(--text-muted);
+        }
+        .valor-membro {
+            font-family: 'JetBrains Mono', monospace;
+            font-weight: 700; color: var(--accent);
+            text-align: right;
+        }
+
+        .linha-separadora td {
+            background: var(--bg-card) !important;
+            padding: 10px 16px;
+            font-size: 11px; font-weight: 600;
+            color: var(--warning) !important;
+            text-align: center;
+            text-transform: uppercase; letter-spacing: 0.5px;
+            border-top: 2px solid var(--border);
+        }
+        .texto-incerto td {
+            color: var(--text-muted) !important;
+            font-style: italic;
+            background: rgba(245,158,11,0.03);
+        }
+
+        /* ── MOBILE ── */
         @media (max-width: 600px) {
-            .area-resumo { grid-template-columns: 1fr 1fr; }
-            .card-total { grid-column: 1 / -1; }
-            td, th { padding: 8px 5px; font-size: 11px; }
-            .tel-membro { font-size: 9px; }
+            body { padding: 10px; }
+
+            /* Stack cards: 2 on top, 1 full-width below */
+            .area-resumo {
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+            }
+            .card-total {
+                grid-column: 1 / -1;
+            }
+
+            .card { padding: 14px 10px; }
+            .card span { font-size: 9px; }
+            .card strong { font-size: 20px; }
+
+            /* Hide phone column */
+            .col-tel-header, .col-tel-cell { display: none; }
+
+            th, td { padding: 12px 10px; }
+        }
+
+        @media (max-width: 380px) {
+            .card strong { font-size: 17px; }
         }
     </style>
 </head>
 <body>
+
+    <!-- Cards primeiro, em cima da tabela para mobile -->
     <div class="area-resumo">
-        <div class="card"><span>Ativos</span><strong id="totalAtivos">0</strong></div>
-        <div class="card"><span>Média</span><strong id="mediaMembro">R$ 0</strong></div>
-        <div class="card card-total"><span>Total</span><strong id="arrecadacaoTotal">R$ 0</strong></div>
+        <div class="card card-ativos">
+            <span>Membros Ativos</span>
+            <strong id="totalAtivos">0</strong>
+        </div>
+        <div class="card card-media">
+            <span>Média por Membro</span>
+            <strong id="mediaMembro">R$ 0,00</strong>
+        </div>
+        <div class="card card-total">
+            <span>Arrecadação Total</span>
+            <strong id="arrecadacaoTotal">R$ 0,00</strong>
+        </div>
     </div>
+
     <div class="table-container">
         <table>
-            <thead><tr><th>Membro / Tel</th><th style="text-align:right;">Total</th></tr></thead>
+            <thead>
+                <tr>
+                    <th>Membro</th>
+                    <th class="col-tel-header">Telefone</th>
+                    <th style="text-align:right;">Total Contribuído</th>
+                </tr>
+            </thead>
             <tbody id="corpoMembros"></tbody>
         </table>
     </div>
+
     <script>
         const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTVFsO0U3JTeEpqIks1fpNUNiHF5J6Pgyv7yYiJKFgqyI08Y_sRB2nnikRvfT4W5CcwQwAW5r0Lvt1x/pub?output=csv';
         let registros = [];
-        const fmt = v => v.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-        const padronizar = t => {
+
+        const padronizarTel = t => {
             let n = String(t).replace(/\D/g, "");
-            return n.length > 8 ? `(${n.slice(-11,-9)}) ${n.slice(-9,-4)}-${n.slice(-4)}` : "N/A";
+            if (n.length <= 11) n = "55" + (n.length <= 9 ? "24" : "") + (n.length === 8 ? "9" : "") + n;
+            return n.length >= 12 ? `+${n.substring(0,2)} (${n.substring(2,4)}) ${n.substring(4,9)}-${n.substring(9,13)}` : "N/A";
         };
 
+        const formatarMoeda = v => v.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+
         async function carregar() {
-            const res = await fetch(url + '&cache=' + Date.now());
-            const csv = await res.text();
-            registros = csv.split('\n').slice(1).filter(l=>l.trim()).map(l=>{
-                const c = l.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(v=>v.replace(/^"|"$/g,'').trim());
-                let [d,m,a] = c[0].split('/');
-                return { tel: c[1].replace(/\D/g,""), nome: c[2].toUpperCase(), mesAno: `${m}/${a}`, ano: a, valor: parseFloat(c[3].replace(/[R$\s.]/g,'').replace(',','.')) || 0, cat: c[4].toLowerCase().includes("dizimo") ? "Dízimo" : c[4] };
-            });
-            renderizar();
+            try {
+                const res = await fetch(url + '&cache=' + Date.now());
+                const csv = await res.text();
+                registros = csv.split('\n').slice(1).filter(l => l.trim()).map(l => {
+                    const c = l.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(v => v.replace(/^"|"$/g,'').trim());
+                    let [d,m,a] = c[0].split('/');
+                    return {
+                        telRaw: String(c[1]).replace(/\D/g,""),
+                        nome: c[2].toUpperCase().trim(),
+                        mesAno: `${m}/${a}`, ano: a,
+                        valor: parseFloat(c[3].replace(/[R$\s.]/g,'').replace(',','.')) || 0,
+                        cat: c[4].toLowerCase().includes("dizimo") ? "Dízimo" : c[4]
+                    };
+                });
+                renderizar();
+            } catch(e) { console.error(e); }
         }
 
         function renderizar(cat="Todas", periodo="Todos") {
-            const f = registros.filter(r => (cat === "Todas" || r.cat === cat) && (periodo === "Todos" || (periodo.length === 4 ? r.ano === periodo : r.mesAno === periodo)));
-            const iden = {}, incer = [];
-            let total = 0;
-            f.forEach(r => {
-                total += r.valor;
-                if(r.nome.includes("INCERTO")) incer.push(r);
-                else {
-                    const k = r.tel || r.nome;
-                    if(!iden[k]) iden[k] = { nome: r.nome, tel: r.tel, total: 0 };
-                    iden[k].total += r.valor;
+            const filtrados = registros.filter(r => {
+                const matchCat = cat === "Todas" || r.cat === cat;
+                const matchPeriodo = periodo === "Todos" ? true
+                    : periodo.length === 4 ? r.ano === periodo
+                    : r.mesAno === periodo;
+                return matchCat && matchPeriodo;
+            });
+
+            const identificados = {}, incertos = {};
+            let somaTotal = 0;
+
+            filtrados.forEach(r => {
+                somaTotal += r.valor;
+                if (!r.nome.includes("REMETENTE INCERTO")) {
+                    const k = r.telRaw || r.nome;
+                    if (!identificados[k]) identificados[k] = { nome: r.nome, tel: r.telRaw, total: 0 };
+                    identificados[k].total += r.valor;
                 }
             });
-            const lista = Object.values(iden).sort((a,b)=>a.nome.localeCompare(b.nome));
-            document.getElementById('totalAtivos').innerText = lista.length;
-            document.getElementById('arrecadacaoTotal').innerText = fmt(total);
-            document.getElementById('mediaMembro').innerText = fmt(lista.length ? total/lista.length : 0);
+            filtrados.forEach(r => {
+                if (r.nome.includes("REMETENTE INCERTO")) {
+                    if (r.telRaw && identificados[r.telRaw]) {
+                        identificados[r.telRaw].total += r.valor;
+                    } else {
+                        const k = r.telRaw || "x" + Math.random();
+                        if (!incertos[k]) incertos[k] = { nome: "REMETENTE INCERTO", tel: r.telRaw, total: 0 };
+                        incertos[k].total += r.valor;
+                    }
+                }
+            });
 
-            let h = lista.map(m => `<tr><td><div class="nome-membro">${m.nome}</div><div class="tel-membro">${padronizar(m.tel)}</div></td><td class="valor-membro">${fmt(m.total)}</td></tr>`).join('');
-            if(incer.length) {
-                h += `<tr class="linha-incerto"><td colspan="2">REMETENTES INCERTOS</td></tr>`;
-                h += incer.map(i => `<tr><td><div class="nome-membro">${i.nome}</div><div class="tel-membro">${padronizar(i.tel)}</div></td><td class="valor-membro">${fmt(i.valor)}</td></tr>`).join('');
+            const lista = Object.values(identificados).sort((a,b) => a.nome.localeCompare(b.nome));
+            const listaI = Object.values(incertos);
+
+            document.getElementById('totalAtivos').innerText = lista.length;
+            document.getElementById('arrecadacaoTotal').innerText = formatarMoeda(somaTotal);
+            document.getElementById('mediaMembro').innerText = lista.length > 0 ? formatarMoeda(somaTotal / lista.length) : "R$ 0,00";
+
+            let html = lista.map(m => `
+                <tr>
+                    <td class="nome-membro">${m.nome}</td>
+                    <td class="telefone-membro col-tel-cell">${padronizarTel(m.tel)}</td>
+                    <td class="valor-membro">${formatarMoeda(m.total)}</td>
+                </tr>`).join('');
+
+            if (listaI.length > 0) {
+                html += `<tr class="linha-separadora"><td colspan="3">⚠ Remetentes não Identificados</td></tr>`;
+                html += listaI.map(m => `
+                    <tr class="texto-incerto">
+                        <td>${m.nome}</td>
+                        <td class="col-tel-cell">${padronizarTel(m.tel)}</td>
+                        <td class="valor-membro">${formatarMoeda(m.total)}</td>
+                    </tr>`).join('');
             }
-            document.getElementById('corpoMembros').innerHTML = h;
+
+            document.getElementById('corpoMembros').innerHTML = html;
         }
+
         window.addEventListener('message', e => renderizar(e.data.categoria, e.data.periodo));
         carregar();
     </script>
